WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
215340
[AutoTableLayout] REGRESSION(
r263855
) Paypal email is rendered right aligned on Safari
https://bugs.webkit.org/show_bug.cgi?id=215340
Summary
[AutoTableLayout] REGRESSION(r263855) Paypal email is rendered right aligned ...
alan
Reported
2020-08-10 15:14:06 PDT
<
rdar://problem/66540254
>
Attachments
Patch
(7.64 KB, patch)
2020-08-10 16:25 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(9.88 KB, patch)
2020-08-10 17:29 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2020-08-10 16:25:12 PDT
Created
attachment 406343
[details]
Patch
alan
Comment 2
2020-08-10 17:29:06 PDT
Created
attachment 406347
[details]
Patch
EWS
Comment 3
2020-08-11 09:40:54 PDT
Committed
r265499
: <
https://trac.webkit.org/changeset/265499
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 406347
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug