[AutoTableLayout] REGRESSION(r263855) Paypal email is rendered right aligned on Safari https://bugs.webkit.org/show_bug.cgi?id=215340 <rdar://problem/66540254>

Reviewed by Simon Fraser.

Source/WebCore:

Prior to r263855, these zero-length, non-empty columns had the preferred width value of 1px and the available space got distributed based on this made-up 1px value.
In this patch, we distribute the available horizontal space evenly among these zero-length, 'width: auto' columns.

Test: fast/table/zero-length-non-empty-columns-with-auto-width.html

* rendering/AutoTableLayout.cpp:
(WebCore::AutoTableLayout::layout):

LayoutTests:

* fast/table/zero-length-non-empty-columns-with-auto-width-expected.html: Added.
* fast/table/zero-length-non-empty-columns-with-auto-width.html: Added.
* platform/mac/fast/table/empty-cells-expected.txt: progression


Canonical link: https://commits.webkit.org/228150@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265499 268f45cc-cd09-0410-ab3c-d52691b4dbfc